# finflow-demo

./: .gitignore  DESIGN.md  LICENSE  Makefile  PRODUCT.md  README.md  ruff.toml
.github/workflows/: ci.yml  release.yml
agents/market-data/: agent.py  main.py  pyproject.toml  server.py  tools.py
agents/market-data/tests/: conftest.py  test_tools.py
agents/news-sentiment/: Dockerfile  agent.py  main.py  pyproject.toml  server.py  tools.py
agents/orchestrator/: Dockerfile  dispatch.py  intent.py  main.py  pyproject.toml  server.py
agents/portfolio/: main.py  pyproject.toml  requirements.txt  server.py  tools.py
agents/portfolio/finflow_portfolio/: agent-card.json  agent.py  mcp_tools.py  openai_model.py
agents/portfolio/tests/: conftest.py  test_tools.py
agents/trade-execution/: agent.py  main.py  pyproject.toml  requirements.txt  server.py  tools.py
bff/: Dockerfile  auth.py  main.py  mock.py  models.py  pyproject.toml  trace.py
bff/routes/: chat.py  health.py  me.py  news.py  policies.py  portfolio.py  tickers.py
bff/tests/: test_chat.py  test_health.py  test_mock.py  test_policies.py  test_portfolio.py  test_tickers.py
docs/: deployment.md
infra/mock-data/: holdings.sql  news.json  tickers.json
mcp-servers/brokerage-mcp/: pyproject.toml  server.py  store.py
mcp-servers/market-data-mcp/: data.py  pyproject.toml  server.py
mcp-servers/news-mcp/: data.py  pyproject.toml  server.py
mcp-servers/portfolio-mcp/: Dockerfile  db.py  pyproject.toml  server.py
ui/: .gitignore  Dockerfile  next.config.ts  package.json  tsconfig.json
(+75 files in other folders)
